vininfo changelog
=================


Unreleased
----------
+ WMI database extended.


v1.1.0
------
+ Allow extraction of basic information even for unsupported brands.


v1.0.0
------
! Dropped QA for Python 2.
! Dropped QA for Python 3.4.
* AvtoVAZ transmission types made more specific.
* Celebrating 1.0.0.


v0.3.0
------
+ Added basic info for Opel and Renault.
+ Details extractors definitions simplified.


v0.2.0
------
+ Added basic info for Nissan.
* Coachwork renamed to body.


v0.1.0
------
+ Basic functionality.